<resources>
    <string name="app_name">Denticitas</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="name_customer">Diana</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_citas">Mis citas</string>
    <string name="menu_agendar">Agendar</string>
    <string name="menu_info">Acerca de</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_perfil">Perfil</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="welcome_message">¡Bienvenido de vuelta!</string>
    <string name="cedula_text">Cedula</string>
    <string name="password_text">Contraseña</string>
    <string name="forgot_pwd_login_text">¿Olvidaste tu contraseña?</string>
    <string name="dont_have_account_text">¿No tienes una cuenta?</string>
    <string name="register_text">Regístrate</string>
    <string name="register_title">Registro</string>
    <string name="password_confirm_text">Confirmar contraseña</string>
    <string name="register_button">Crear cuenta</string>
    <string name="already_have_account_text">¿Ya tienes cuenta?</string>
    <string name="inicia_sesion_text">Inicia sesión</string>
    <string name="solicitar_button">Solicitar</string>
    <string name="completar_datos_text">Completa tus datos</string>
    <string name="nombre_text">Nombres</string>
    <string name="apellido_text">Apellidos</string>
    <string name="fecha_nacimiento_text">Fecha de nacimiento</string>
    <string name="telefono_text">Teléfono</string>
    <string name="direccion_text">Dirección</string>
    <string name="email_text">Email</string>
    <string name="ocupacion_text">Ocupación</string>
    <string name="data_button">Completar</string>
    <string name="agenda_cita_texto">Agenda tu cita</string>
    <string name="ok_text">Siguiente</string>
    <string name="cancel_text">Cancelar</string>
    <string name="confirmar_fecha">Confirmar</string>
    <string name="selecciona_turno">Seleccionar turno</string>
    <string name="pref_key">DENTICITAS-SEM-INTEGRADOR</string>
    <string name="selecciona_fecha">Seleccionar fecha</string>
    <string name="salir">SALIR</string>
    <string name="modify_button">Actualizar</string>
    <string name="mi_historia">Mi historia</string>
</resources>