<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".cliente.auth.view.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/registro">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/vector_registro"
            android:layout_marginBottom="60dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegisterTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_weight="7"
                    android:text="@string/register_title" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="2"
                    android:src="@drawable/logo" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWhite"
                android:hint="@string/cedula_text"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_cedula_registro"
                    style="@style/InputEditTextWhite"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputPasswordWhite"
                android:hint="@string/password_text"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_pwd_registro"
                    style="@style/InputEditPasswordWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputPasswordWhite"
                android:hint="@string/password_confirm_text"
                app:startIconDrawable="@drawable/ic_lock">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_pwd_confirmar_registro"
                    style="@style/InputEditPasswordWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_registro"
                style="@style/Button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register_button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/LoginText"
                    android:text="@string/already_have_account_text" />

                <TextView
                    android:id="@+id/btn_inicia_sesion"
                    style="@style/RegistrateText"
                    android:text="@string/inicia_sesion_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>