<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".cliente.auth.view.DatosPersonalesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/vector_registro"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegisterTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_weight="7"
                    android:text="@string/completar_datos_text" />


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWhite"
                android:hint="@string/nombre_text"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_nombre_datos"
                    style="@style/InputEditTextWhite"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWhite"
                android:hint="@string/apellido_text"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_apellido_datos"
                    style="@style/InputEditTextWhite"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWhite"
                android:hint="@string/fecha_nacimiento_text"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_fecha_datos"
                    style="@style/InputEditTextWhite"
                    android:importantForAutofill="no"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWhite"
                android:hint="@string/telefono_text"
                app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_telefono_datos"
                    style="@style/InputEditTextWhite"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWhite"
                android:hint="@string/direccion_text"
                app:startIconDrawable="@drawable/ic_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_direccion_datos"
                    style="@style/InputEditTextWhite"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWhite"
                android:hint="@string/email_text"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email_datos"
                    style="@style/InputEditTextWhite"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWhite"
                android:hint="@string/ocupacion_text"
                app:startIconDrawable="@drawable/ic_work">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_cedula_registrp"
                    style="@style/InputEditTextWhite"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_registro"
                style="@style/Button"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/data_button"
                android:layout_marginBottom="60dp"/>

            </LinearLayout>
        </LinearLayout>
</ScrollView>