<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cliente.auth.view.LoginActivity"
    android:background="@color/White">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/vector_login" />

            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                style="@style/LoginTitle"/>

            <TextView
                android:text="@string/welcome_message"
                style="@style/LoginText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="30dp">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWhite"
                android:hint="@string/cedula_text"
                app:startIconDrawable="@drawable/ic_person">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditTextWhite"
                    android:id="@+id/input_cedula_login"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputPasswordWhite"
                android:hint="@string/password_text"
                app:startIconDrawable="@drawable/ic_lock">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditPasswordWhite"
                    android:id="@+id/input_pwd_login"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                    style="@style/Button"
                    android:id="@+id/btn_login"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"/>
            <ImageView
                android:id="@+id/btn_fingerprint"
                android:layout_marginTop="25dp"
                style="@style/Fingerprint"
                android:src="@drawable/ic_fingerprint"/>
            <TextView
                android:id="@+id/btn_forgot_pwd"
                android:layout_marginTop="30dp"
                android:text="@string/forgot_pwd_login_text"
                style="@style/LoginText"  />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    style="@style/LoginText"
                    android:text="@string/dont_have_account_text"
                    />
                <TextView
                    android:id="@+id/btn_registrate"
                    style="@style/RegistrateText"
                    android:text="@string/register_text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>