<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".cliente.agendar.view.AgendarFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegisterTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_weight="7"
                    android:text="@string/agenda_cita_texto" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="2"
                    android:src="@drawable/logo" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinner_especialistas"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWhite"
                android:hint="@string/selecciona_fecha"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_fecha"
                    style="@style/InputEditTextWhite"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>


            <!--<DatePicker
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="30dp"
                android:startYear="2020" />-->

            <TextView
                style="@style/ConfirmarText"
                android:id="@+id/confirmar_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_fecha"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>